--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
-dash==1.1.1
-dash-core-components==1.1.1
-dash-html-components==1.0.0
 dash-renderer==1.0.0
 dash-table==4.1.0
 dask==2.1.0
@@ -19,13 +16,16 @@ Jinja2==2.11.3
 jupyter-core==4.5.0
 MarkupSafe==1.1.1
 nbformat==4.4.0
-numpy==1.20.0
-pandas==0.24.2
-plotly==4.1.0
 pytz==2019.1
 six==1.12.0
 traitlets==4.3.2
 Werkzeug==0.15.4
-scikit-learn==0.24.2
 requests==2.25.1
 lxml==4.6.3
+dash==1.20.0
+dash_html_components==1.1.3
+dash_core_components==1.16.0
+plotly==4.14.3
+pandas==1.1.3
+numpy==1.19.5
+scikit_learn==0.24.2
